[gd_scene load_steps=10 format=2]

[ext_resource path="res://image/skill_back.png" type="Texture" id=1]
[ext_resource path="res://SkillList.gd" type="Script" id=2]
[ext_resource path="res://SkillUI.gd" type="Script" id=3]
[ext_resource path="res://Actors/Skill/Punch.tscn" type="PackedScene" id=4]
[ext_resource path="res://image/batu.png" type="Texture" id=5]
[ext_resource path="res://image/batu_2.png" type="Texture" id=6]
[ext_resource path="res://image/Gugi-Regular.ttf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=2]
size = 11
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=1]
use_mipmaps = true
font_data = ExtResource( 7 )

[node name="SkillUI" type="Control" groups=["skillui"]]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 3 )

[node name="SkillWindow" type="ColorRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 217.0
margin_top = 197.0
margin_right = 472.0
margin_bottom = 354.0
mouse_filter = 2
color = Color( 1, 1, 1, 0.34902 )
__meta__ = {
"_edit_lock_": true
}

[node name="SkillLists" type="GridContainer" parent="SkillWindow"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -116.0
margin_top = -68.0
margin_right = 116.0
margin_bottom = 68.0
columns = 5
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Punch" parent="SkillWindow/SkillLists" instance=ExtResource( 4 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 40.0
margin_bottom = 40.0

[node name="CloseButton" type="TextureButton" parent="SkillWindow"]
margin_left = 240.0
margin_right = 271.0
margin_bottom = 30.0
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 6 )
expand = true

[node name="Label2" type="Label" parent="SkillWindow"]
margin_left = 1.0
margin_top = -17.0
margin_right = 224.0
margin_bottom = 8.0
custom_fonts/font = SubResource( 2 )
text = "Combo bonus increases skill usage probability"

[node name="Back" type="HBoxContainer" parent="."]
margin_left = 236.0
margin_top = 410.0
margin_right = 536.0
margin_bottom = 450.0
rect_min_size = Vector2( 40, 40 )
custom_constants/separation = 15

[node name="TextureRect" type="TextureRect" parent="Back"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
texture = ExtResource( 1 )
expand = true

[node name="Label" type="Label" parent="Back/TextureRect"]
margin_right = 40.0
margin_bottom = 25.0
custom_colors/font_color = Color( 0.870588, 0.113725, 0.113725, 1 )
custom_fonts/font = SubResource( 1 )
text = "1"

[node name="TextureRect2" type="TextureRect" parent="Back"]
visible = false
margin_left = 55.0
margin_right = 95.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
texture = ExtResource( 1 )
expand = true

[node name="Label2" type="Label" parent="Back/TextureRect2"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_right = 20.0
margin_bottom = 25.0
custom_colors/font_color = Color( 0.870588, 0.113725, 0.113725, 1 )
custom_fonts/font = SubResource( 1 )
text = "2"

[node name="TextureRect3" type="TextureRect" parent="Back"]
visible = false
margin_left = 110.0
margin_right = 150.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
texture = ExtResource( 1 )
expand = true

[node name="Label3" type="Label" parent="Back/TextureRect3"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_right = 20.0
margin_bottom = 25.0
custom_colors/font_color = Color( 0.870588, 0.113725, 0.113725, 1 )
custom_fonts/font = SubResource( 1 )
text = "3"

[node name="TextureRect4" type="TextureRect" parent="Back"]
visible = false
margin_left = 165.0
margin_right = 205.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
texture = ExtResource( 1 )
expand = true

[node name="Label4" type="Label" parent="Back/TextureRect4"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_right = 20.0
margin_bottom = 25.0
custom_colors/font_color = Color( 0.870588, 0.113725, 0.113725, 1 )
custom_fonts/font = SubResource( 1 )
text = "4"

[node name="TextureRect5" type="TextureRect" parent="Back"]
visible = false
margin_left = 220.0
margin_right = 260.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
texture = ExtResource( 1 )
expand = true

[node name="Label5" type="Label" parent="Back/TextureRect5"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_right = 20.0
margin_bottom = 25.0
custom_colors/font_color = Color( 0.870588, 0.113725, 0.113725, 1 )
custom_fonts/font = SubResource( 1 )
text = "5"

[node name="ActiveSkills" type="HBoxContainer" parent="."]
margin_left = 236.0
margin_top = 410.0
margin_right = 536.0
margin_bottom = 450.0
rect_min_size = Vector2( 40, 40 )
custom_constants/separation = 15

[node name="Punch" parent="ActiveSkills" instance=ExtResource( 4 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 40.0
margin_bottom = 40.0

[node name="Tween" type="Tween" parent="."]

[connection signal="pressed" from="SkillWindow/CloseButton" to="." method="_on_CloseButton_pressed"]
